styles/modals.css
.popup {
  display: none;
}

.popup2 {
  display: none;
}

.modal-consultation {
  position: fixed;
  background-color: rgba(255, 255, 255, 1);
  margin-left: auto;
  margin-right: auto;
  top: 0;
  left: 0;
  right: 0;
  text-align: center;
  max-width: 350px;
  z-index: 2;
}

.consultation__modal {
  display: flex;
  justify-content: space-between;
  background-color: rgba(255, 255, 255, 1);
  max-width: 1170px;
  margin: 162px auto 0 auto;
  padding: 10px;
  border-radius: 30px;
  max-height: 605px;
}

@media screen and (max-width: 1100px) {
  .consultation__modal {
    flex-direction: column-reverse;
    margin: 17px auto 0 auto;
    max-width: 350px;
    border-radius: 15px;
    padding: 5px;
    height: 650px;
    max-height: 95vh;
    overflow-y: scroll;
  }
}

@media screen and (max-width: 350px) {
  .consultation__modal {
    max-width: calc(100% - 10px);
  }
}

.consultation__modal::-webkit-scrollbar {
  width: 0;
}

.consultation__forma {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  grid-gap: 20px;
  margin-top: 40px;
}

@media screen and (max-width: 1100px) {
  .consultation__forma {
    margin-top: 20px;
    grid-gap: 10px;
  }
}

.consultation__forma > input {
  width: 100%;
  height: 55px;
  border-radius: 10px;
  border: none;
  background-color: rgba(244, 244, 244, 1);
  font-family: "Manrope", sans-serif;
  font-size: 16px;
  font-weight: 500;
  line-height: 25px;
  padding-left: 20px;
  color: rgba(190, 190, 190, 1);
}

.consultation__forma > input::-webkit-input-placeholder {
  color: rgba(190, 190, 190, 1);
}
.consultation__forma > input:-moz-placeholder {
  color: rgba(190, 190, 190, 1);
  opacity: 1;
}
.consultation__forma > input::-moz-placeholder {
  color: rgba(190, 190, 190, 1);
  opacity: 1;
}
.consultation__forma > input:-ms-input-placeholder {
  color: rgba(190, 190, 190, 1);
}
.consultation__forma > input::-ms-input-placeholder {
  color: rgba(190, 190, 190, 1);
}

.consultation__forma > input::placeholder {
  color: rgba(190, 190, 190, 1);
}

.consultation__forma > input:focus {
  color: rgba(33, 37, 41, 1);
  opacity: 1;
  outline: 0;
  outline-offset: 0;
}

.consultation > button {
  width: 335px;
  height: 60px;
  border: none;
  background-color: rgba(43, 41, 39, 1) !important;
  color: rgba(255, 255, 255, 1) !important;
}

.consultation__forma > span {
  font-family: "Manrope", sans-serif;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  color: rgba(43, 41, 39, 0.45);
  text-align: left;
}

.consultation__forma > span > a {
  text-decoration: underline;
  color: rgba(43, 41, 39, 0.45);
}

.consultation-left {
  width: 495px;
  padding: 0 10px 10px 50px;
}

@media screen and (max-width: 1100px) {
  .consultation-left {
    width: 100%;
    padding: 0 10px 10px 10px;
  }
}

.consultation-left > h2 {
  margin-top: 50px;
}

@media screen and (max-width: 1100px) {
  .consultation-left > h2 {
    margin-top: 20px;
  }
  .headline-cons {
    font-size: 38px !important;
    line-height: 40px !important;
  }
}

.consultation__right {
  position: relative;
}

.workman-max {
  width: 585px;
  height: 585px;
}

.workman-min {
  display: none;
}

@media screen and (max-width: 1100px) {
  .workman-max {
    display: none;
  }
  .workman-min {
    display: block;
    width: 100%;
    height: 220px;
    border-radius: 10px;
  }
}

@media screen and (max-width: 375px) {
  .workman-min {
    width: 100%;
    height: auto;
  }
}

.consultation-left > p {
  font-family: "Manrope", sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  color: rgba(43, 41, 39, 1);
  text-align: left;
  margin: 5px 0 40px 0;
}

@media screen and (max-width: 1100px) {
  .consultation-left > p {
    margin: 5px 0 25px 0;
    font-size: 12px;
  }
}

.consultation__right > button {
  position: absolute;
  top: 15px;
  right: 15px;
  background: transparent;
}

@media screen and (max-width: 1100px) {
  .consultation__right > button {
    top: 5px;
    right: 5px;
  }
}

.darkening {
  background: rgba(0, 0, 0, 0.5);
  height: 100%;
  position: fixed;
  width: 100%;
  z-index: 2;
  top: 0;
  left: 0;
}

.darkening-header {
  background: rgba(0, 0, 0, 0.5);
  height: 100%;
  position: fixed;
  margin-top: 60px;
  width: 100%;
  z-index: 2;
  top: 0;
  left: 0;
}

/**************выбор города***************/

.city__modal {
  max-width: 500px;
  margin: 150px auto 0 auto;
  border-radius: 30px;
  padding: 60px;
  background-color: rgba(255, 255, 255, 1);
  position: relative;
}

@media screen and (max-width: 870px) {
  .city__modal {
    margin: 100px auto 0 auto;
  }
}

@media screen and (max-width: 600px) {
  .city__modal {
    padding: 25px;
    max-width: calc(100% - 30px);
    border-radius: 15px;
  }
}

@media screen and (max-width: 350px) {
  .city__modal {
    max-width: calc(100% - 10px);
    padding: 15px;
  }
}

.city__modal > h2 {
  text-align: left;
  margin: 0 0 15px 0;
}

.city__modal > button {
  position: absolute;
  top: 20px;
  right: 20px;
  cursor: pointer;
}

@media screen and (max-width: 600px) {
  .city__modal > button {
    top: 15px;
    right: 15px;
  }
}

.input-block {
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.input-block > input {
  width: 100%;
  height: 55px;
  border-radius: 10px;
  border: none;
  background-color: rgba(244, 244, 244, 1);
  font-family: "Manrope", sans-serif;
  font-size: 16px;
  font-weight: 500;
  line-height: 25px;
  padding-left: 25px;
  color: #2b2927;
  opacity: 0.45;
}

.input-block > input:focus,
.input-block > input:focus {
  opacity: 1;
  outline: 0;
  outline-offset: 0;
}

@media screen and (max-width: 425px) {
  .input-block > input {
    font-size: 14px;
  }
}

.input-block > input::-webkit-input-placeholder {
  color: rgba(33, 37, 41, 1);
}
.input-block > input:-moz-placeholder {
  color: rgba(33, 37, 41, 1);
  opacity: 1;
}
.input-block > input::-moz-placeholder {
  color: rgba(33, 37, 41, 1);
  opacity: 1;
}
.input-block > input:-ms-input-placeholder {
  color: rgba(33, 37, 41, 1);
}
.input-block > input::-ms-input-placeholder {
  color: rgba(33, 37, 41, 1);
}

.input-block > input::placeholder {
  color: rgba(33, 37, 41, 1);
}

.search {
  position: absolute;
  top: 18px;
  right: 20px;
}

.city__list {
  margin-top: 25px;
}

.city__list > li {
  display: flex;
  align-items: center;
}

.city-pin {
  margin-right: 10px;
}

.city-pin__active > path {
  fill: #ef4824;
}

.city__active {
  color: rgba(33, 37, 41, 1) !important;
}

.city__list > li > a {
  font-family: "Manrope", sans-serif;
  font-size: 16px;
  font-weight: 500;
  line-height: 25px;
  color: rgba(205, 205, 205, 1);
}

.city__list li:not(:last-child) {
  margin-bottom: 10px;
}

@media screen and (max-width: 1100px) {
  .close-cons {
    width: 30px;
    height: 30px;
  }
}

